crates/oxc_linter/src/snapshots/jsx_no_comment_text_nodes.snap
---
source: crates/oxc_linter/src/tester.rs
expression: jsx_no_comment_text_nodes
---
  ⚠ eslint-plugin-react(jsx-no-comment-TextNodes): Comments inside children section of tag should be placed inside braces
   ╭─[jsx_no_comment_text_nodes.tsx:3:1]
 3 │                       render() {
 4 │                         return (<div>// invalid</div>);
   ·                                      ──────────
 5 │                       }
   ╰────

  ⚠ eslint-plugin-react(jsx-no-comment-TextNodes): Comments inside children section of tag should be placed inside braces
   ╭─[jsx_no_comment_text_nodes.tsx:3:1]
 3 │                       render() {
 4 │                         return (<>// invalid</>);
   ·                                   ──────────
 5 │                       }
   ╰────

  ⚠ eslint-plugin-react(jsx-no-comment-TextNodes): Comments inside children section of tag should be placed inside braces
   ╭─[jsx_no_comment_text_nodes.tsx:3:1]
 3 │                       render() {
 4 │                         return (<div>/* invalid */</div>);
   ·                                      ─────────────
 5 │                       }
   ╰────

  ⚠ eslint-plugin-react(jsx-no-comment-TextNodes): Comments inside children section of tag should be placed inside braces
   ╭─[jsx_no_comment_text_nodes.tsx:4:1]
 4 │                             return (
 5 │ ╭─▶                           <div>
 6 │ │                               // invalid
 7 │ ╰─▶                           </div>
 8 │                             );
   ╰────

  ⚠ eslint-plugin-react(jsx-no-comment-TextNodes): Comments inside children section of tag should be placed inside braces
    ╭─[jsx_no_comment_text_nodes.tsx:4:1]
  4 │                             return (
  5 │ ╭─▶                           <div>
  6 │ │                               asdjfl
  7 │ │                               /* invalid */
  8 │ │                               foo
  9 │ ╰─▶                           </div>
 10 │                             );
    ╰────

  ⚠ eslint-plugin-react(jsx-no-comment-TextNodes): Comments inside children section of tag should be placed inside braces
   ╭─[jsx_no_comment_text_nodes.tsx:5:1]
 5 │                               <div>
 6 │ ╭─▶                             {'asdjfl'}
 7 │ │                               // invalid
 8 │ ╰─▶                             {'foo'}
 9 │                               </div>
   ╰────

  ⚠ eslint-plugin-react(jsx-no-comment-TextNodes): Comments inside children section of tag should be placed inside braces
   ╭─[jsx_no_comment_text_nodes.tsx:2:1]
 2 │                     const Component2 = () => {
 3 │                       return <span>/*</span>;
   ·                                    ──
 4 │                     };
   ╰────


