crates/oxc_linter/src/snapshots/jsx_no_undef.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint-plugin-react(jsx-no-undef): 'App' is not defined.
   ╭─[jsx_no_undef.tsx:1:26]
 1 │ var React; React.render(<App />);
   ·                          ───
   ╰────

  ⚠ eslint-plugin-react(jsx-no-undef): 'Appp' is not defined.
   ╭─[jsx_no_undef.tsx:1:26]
 1 │ var React; React.render(<Appp.Foo />);
   ·                          ────
   ╰────

  ⚠ eslint-plugin-react(jsx-no-undef): 'appp' is not defined.
   ╭─[jsx_no_undef.tsx:1:26]
 1 │ var React; React.render(<appp.Foo />);
   ·                          ────
   ╰────

  ⚠ eslint-plugin-react(jsx-no-undef): 'appp' is not defined.
   ╭─[jsx_no_undef.tsx:1:26]
 1 │ var React; React.render(<appp.foo.Bar />);
   ·                          ────
   ╰────

  ⚠ eslint-plugin-react(jsx-no-undef): 'Foo' is not defined.
   ╭─[jsx_no_undef.tsx:1:26]
 1 │ var React; React.render(<Foo />);
   ·                          ───
   ╰────

  ⚠ eslint-plugin-react(jsx-no-undef): 'Unknown' is not defined.
   ╭─[jsx_no_undef.tsx:1:35]
 1 │ var React; Unknown; React.render(<Unknown />)
   ·                                   ───────
   ╰────

  ⚠ eslint-plugin-react(jsx-no-undef): 'App' is not defined.
   ╭─[jsx_no_undef.tsx:1:49]
 1 │ var React; { const App = null; }; React.render(<App />);
   ·                                                 ───
   ╰────

  ⚠ eslint-plugin-react(jsx-no-undef): 'App' is not defined.
   ╭─[jsx_no_undef.tsx:1:42]
 1 │ var React; enum A { App }; React.render(<App />);
   ·                                          ───
   ╰────
